2010-05-05  Gary Benson  <gbenson@redhat.com>

	PR icedtea/481
	* ports/hotspot/src/share/vm/shark/sharkTopLevelBlock.cpp
	(SharkTopLevelBlock::improve_virtual_call): Disable an
	optimization that cannot currently be supported.

2010-05-04  Andrew John Hughes  <ahughes@redhat.com>

	Move OpenJDK patches to appropriate subdirectory.
	* patches/icedtea-6616792-fix.patch,
	* patches/icedtea-iso-8859-15-fix.patch:
	Moved to...
	* Makefile.am: Fix paths to patches.
	* patches/openjdk/6616792-focus-tests-fix.patch,
	* patches/openjdk/6798572-iso-8859-15-fix.patch:
	...here.

2010-05-04  Pavel Tisnovsky  <ptisnovs@redhat.com>

	* patches/icedtea-iso-8859-15-fix.patch:
	fixed ISO-8859-1 and ISO-8859-15 charsets relationship

2010-05-03  Pavel Tisnovsky  <ptisnovs@redhat.com>

	* patches/icedtea-6616792-fix.patch:
	fixed AWT focus regression tests

2010-04-30  Gary Benson  <gbenson@redhat.com>

	PR icedtea/324
	* ports/hotspot/src/share/vm/shark/sharkTopLevelBlock.cpp
	(SharkTopLevelBlock::do_aload): Cope with cases where
	the array's type is unknown.
	(SharkTopLevelBlock::do_astore): Likewise.

2010-04-29  Pavel Tisnovsky  <ptisnovs@redhat.com>

	* overlays/openjdk/jdk/test/com: Removed, correct
	version of these tests are now available in OpenJDK
	itself.

2010-04-28  Andrew John Hughes  <ahughes@redhat.com>

	* Makefile.am:
	Add patch when SystemTap is enabled to support
	building with GCC 4.5.
	* patches/systemtap-gcc-4.5.patch:
	Add cast to NULL (doesn't apply to DTrace due
	to differences between SystemTap and DTrace macros).

2010-04-24  Matthias Klose  <doko@ubuntu.com>

	* Makefile.am (check-langtools, check-jdk): Allow overwriting -samevm
	with the environment variable ICEDTEA_JTREG_OTHERVM.

2010-04-23  Tomas Hurka <Tomas.Hurka@Sun.COM>

	* Makefile.am: Update visualvm build support for 1.2.2.

2010-04-22  Xerxes Rånby  <xerxes@zafena.se>

	* ports/hotspot/src/share/vm/shark/sharkNativeWrapper.cpp
	(SharkNativeWrapper::initialize): Shark calling static jni